--- a/index.html
+++ b/index.html
@@ -1,16 +1,94 @@
+<!-- Início da página -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>TechFácil - Início</title>
 </head>
 <body>
-    <h1>Bem-vindo ao AutoShow!</h1>
-<!-- Imagem ilustrativa de um carro -->
-<img src="imagens/carro1.jpg" alt="Imagem de um carro moderno" width="300">
-<p>Este é um site onde você conhece os modelos de carros mais modernos do
-mercado.</p>
-<p>Aqui você encontra informações atualizadas com qualidade e estilo.</p>
+
+  <p>
+    <a href="#introducao">Introdução</a> |
+    <a href="#imagens">Imagens</a> |
+    <a href="#conteudo-extra">Conteúdo Extra</a>
+  </p>
+
+  <!-- Títulos principais -->
+  <h1>Bem-vindo ao TechFácil</h1>
+  <h2>Tecnologia descomplicada para todos</h2>
+  <h3>Comece agora mesmo!</h3>
+
+  <!-- Início da seção de introdução -->
+  <a name="introducao"></a>
+  <p>
+    <i><b>O TechFácil</b></i> é um site feito para <i>ajudar qualquer pessoa</i> a entender melhor o mundo da tecnologia.  
+    Aqui você encontra conteúdos explicados de forma <u>simples e direta</u> para facilitar seu aprendizado.
+  </p>
+
+  <p>
+    <u>Hoje em dia</u>, a tecnologia está presente em tudo: <b>trabalho</b>, <b>estudo</b>, <b>comunicação</b> e até em casa.  
+    Por isso, é importante estar atualizado sobre o assunto.<br>
+    <u>Não importa sua idade</u>, sempre é tempo de aprender!
+  </p>
+
+  <p>
+    <b>Aproveite nossos conteúdos</b> e <i>acesse as seções</i> do site.  
+    <u>Nós estamos aqui para te ajudar!</u>
+  </p>
+
+  <!-- Início da seção de imagens -->
+  <a name="imagens"></a>
+  <h3>Galeria Tech</h3>
+
+  <figure>
+    <img src="imagens/computadorantigo.jpg" alt="Imagem 1" width="200">
+    <figcaption>Imagem de um computador antigo</figcaption>
+  </figure>
+
+  <figure>
+    <img src="imagens/dispositivosmodernos.jpg" alt="Imagem 2" width="300" height="150">
+    <figcaption>Dispositivos modernos conectados</figcaption>
+  </figure>
+
+  <figure>
+    <img src="imagens/inteligenciaartificial.jpg" alt="Imagem 3" width="100">
+    <figcaption>Ícone de inteligência artificial</figcaption>
+  </figure>
+
+  <figure>
+    <img src="imagens/redes.jpg" alt="Imagem 4" width="250" height="180">
+    <figcaption>Conexões em rede</figcaption>
+  </figure>
+
+  <!-- Início da seção de conteúdo extra -->
+  <a name="conteudo-extra"></a>
+  <h3>Passos para começar a aprender tecnologia</h3>
+  <ol>
+    <li>Escolha um assunto do seu interesse</li>
+    <li>Busque conteúdos básicos na internet</li>
+    <li>Pratique com exercícios simples</li>
+    <li>Participe de fóruns e grupos de estudo</li>
+    <li>Crie seus próprios projetos</li>
+  </ol>
+
+  <h3>Temas que você encontrará no TechFácil</h3>
+  <ul>
+    <li>Programação</li>
+    <li>Segurança Digital</li>
+    <li>Inteligência Artificial</li>
+    <li>Internet das Coisas</li>
+  </ul>
+
+  <!-- Links úteis -->
+  <div>
+    <h3>Explore mais:</h3>
+    <p>
+      <a href="sobre.html">Saiba mais sobre este site (página interna)</a><br>
+      <a href="https://www.uol.com.br/&quot; target="_blank">Visite o TecMundo</a><br>
+      <a href="https://www.olhardigital.com.br&quot; target="_blank">Acesse o Olhar Digital</a>
+    </p>
+  </div>
+
+  <!-- Fim da página -->
 </body>
 </html>
